<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relative2nd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/nim_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/nim_tag_string"
            android:textSize="@dimen/tag_size" />

        <TextView
            android:id="@+id/nim_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/nim_tag"
            android:text="@string/nim_value_string"
            android:textSize="@dimen/value_size" />

        <TextView
            android:id="@+id/name_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/nim_value"
            android:layout_marginTop="5dp"
            android:text="@string/name_tag_string"
            android:textSize="@dimen/tag_size" />

        <TextView
            android:id="@+id/name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/name_tag"
            android:text="@string/name_value_string"
            android:textSize="@dimen/value_size" />

        <TextView
            android:id="@+id/address_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/name_value"
            android:layout_marginTop="5dp"
            android:text="@string/address_tag_string"
            android:textSize="@dimen/tag_size" />

        <TextView
            android:id="@+id/address_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/address_tag"
            android:text="@string/address_value_string"
            android:textSize="@dimen/value_size" />

        <TextView
            android:id="@+id/phone_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/address_value"
            android:layout_marginTop="5dp"
            android:text="@string/phone_tag_string"
            android:textSize="@dimen/tag_size" />

        <TextView
            android:id="@+id/phone_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/phone_tag"
            android:text="@string/phone_value_string"
            android:textSize="@dimen/value_size" />

        <TextView
            android:id="@+id/email_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/phone_value"
            android:layout_marginTop="5dp"
            android:text="@string/email_tag_string"
            android:textSize="@dimen/tag_size" />

        <TextView
            android:id="@+id/email_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/email_tag"
            android:text="@string/email_value_string"
            android:textSize="@dimen/value_size" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="157dp"
        android:layout_below="@+id/relative2nd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/photo_description"
        app:srcCompat="@drawable/a11_2016_09986" />


</RelativeLayout>